# CRM_discovery

./: 1_expand_peaks_to_get_borders.py  1_find_enriched_regions.py  2_create_distance_matrix.py  2_create_distance_matrix.py.backup  3_create_and_run_chomHMM.py  3_create_seed_motif.py  4_parse_chromHMM_output.py  5_Run_MEME_and_FIMO.py  6_parse_MEME_toget_ref_motifs.py  8_map_tags_to_ref.py  Calculate_peak_standard_deviation_score.py  Calculate_state_percentage_chomHMM.py  Compute_logLiklihood_from_peaks.py  Compute_threshold_for_chromHMM.py  Create_correlation_heatmap_for_ref.py  Pairwise_distances_between_refs.py  Plot_of_mean_vs_std_for_all_factors.py  Plot_of_mean_vs_std_for_all_factors_8.py  README.md  README.rst  Run_MEME_4.py  Run_pipeline.py  compute_correlation_and_plot_heatmap.py  compute_euclidean_distance.py  create_CDT_from_output.py  create_and_run_chomHMM_2.py  create_chromHMM_input_2.py  expand_peaks_to_get_borders_1.py  map_tags_to_ref_7.py  map_tags_to_ref_8.py  parse_MEME_toget_ref_motifs_5.py  parse_chromHMM_output_3.py  parse_chromHMM_output_4.py  run_FIMO_to_get_ref_locations_6.py  search_seed_in_enriched_loci.py  test.pbs
meme_4.10.2/tests/: Makefile  Makefile.am  Makefile.in
meme_4.10.2/tests/ame/: Makefile  Makefile.in  ame.txt
meme_4.10.2/tests/centrimo/: Makefile  Makefile.in
meme_4.10.2/tests/clustalw2fasta/: Makefile  Makefile.in
meme_4.10.2/tests/common/: Makefile  Makefile.in  crp0.meme.html
meme_4.10.2/tests/create-priors/: Makefile  Makefile.in  priors.dist  priors.wig
meme_4.10.2/tests/draw-mhmm/: Makefile  Makefile.in
(+973 files in other folders)
